MDEV-19961 MIN(timestamp_column) returns a wrong result in a GROUP BY query